--- a/index.html
+++ b/index.html
@@ -408,6 +408,7 @@
       </div>
     </div>
 
+
     <script>
       let tasbihCount = 0;
       let sholawatCount = 0;
@@ -750,6 +751,10 @@
           createFloatingStars();
         }
       }, 300000);
-    </script>
+		</script>
+		<div class="footer" style="margin-top:20px; background: rgba(0,0,0,0.08); border-radius: 12px; padding: 12px 0 0 0; text-align: center;">
+			<small style="color: #ffd700; opacity:0.8; display: block;">©2025 wann. All rights reserved.</small>
+		</div>
+
   </body>
 </html>
